# omochi_collector

./: # AWS App Integration Strategy.md  .gitignore  ARCHITECTURE.md  LICENSE  TAGS_APPS_SCRIPT.js  collect.html  firebase-messaging-sw.js  index.html  my-collections.html
omochi-be-master@1170e0e6cac/: .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml  main.py  manage.py  package-lock.json  pyproject.toml  serverless.yml
omochi-be-master@1170e0e6cac/.github/rules/: omochi-review-rules.mdc
omochi-be-master@1170e0e6cac/docs/: firebase_setup.md  openai_integration.md  payments.md  srs.md  stripe_connect.md
omochi-be-master@1170e0e6cac/docs/design/: backend_system_design.md  database_design.md
omochi-be-master@1170e0e6cac/lambda_handlers/: __init__.py  email_processor.py
omochi-be-master@1170e0e6cac/omochi/: asgi.py  middlewares.py  settings.py  storage_backends.py  urls.py  wsgi.py
omochi-be-master@1170e0e6cac/omochi/areas/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
omochi-be-master@1170e0e6cac/omochi/articles/: admin.py  apps.py  forms.py  models.py  sitemaps.py
omochi-be-master@1170e0e6cac/omochi/campaigns/: admin.py  apps.py  forms.py  models.py  services.py  widgets.py
omochi-be-master@1170e0e6cac/omochi/carts/: models.py
omochi-be-master@1170e0e6cac/omochi/common/: __init__.py  apps.py  direct_email_service.py  email_templates.py  multilingual_service.py  multilingual_venue_service.py  openai_service.py  sitemaps.py  tests.py  utils.py  venue_questions_mixin.py
omochi-be-master@1170e0e6cac/omochi/menus/: admin.py  (+3 more)
(+483 files in other folders)
